partially implement login and register views and logic; add authentication abstractions and partial implementation

--- a/RealmeyeIdentity/appsettings.json
+++ b/RealmeyeIdentity/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "UserDatabase": {
+    "Database": "realmeyeIdentity",
+    "UserCollectionName": "users"
+  },
+  "IdToken": {
+    "Issuer": "RealmeyeIdentity",
+    "LifetimeMinutes": 15
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
