add registration session; add change password partial view and logic; add model error utils; other small changes

--- a/RealmeyeIdentity/Properties/launchSettings.json
+++ b/RealmeyeIdentity/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "RealmeyeIdentity": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "?redirectUri=test",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
