--- a/RealmeyeIdentity/RealmeyeIdentity.csproj
+++ b/RealmeyeIdentity/RealmeyeIdentity.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
