add full auth service implementation; add more options classes, move values to config

--- a/RealmeyeIdentity/appsettings.json
+++ b/RealmeyeIdentity/appsettings.json
@@ -3,6 +3,16 @@
     "Database": "realmeyeIdentity",
     "UserCollectionName": "users"
   },
+  "Password": {
+    "SaltLengthBytes": 32
+  },
+  "RegistrationSession": {
+    "LifetimeMinutes": 10,
+    "IdLengthBytes": 128
+  },
+  "CodeGenerator": {
+    "CodeLengthBytes": 32
+  },
   "IdToken": {
     "Issuer": "RealmeyeIdentity",
     "LifetimeMinutes": 15
