add argon2 password hash implementation

--- a/RealmeyeIdentity/appsettings.json
+++ b/RealmeyeIdentity/appsettings.json
@@ -4,7 +4,11 @@
     "UserCollectionName": "users"
   },
   "Password": {
-    "SaltLengthBytes": 32
+    "SaltLengthBytes": 32,
+    "HashLengthBytes": 128,
+    "HashMemoryKbytes": 19456,
+    "HashIterations": 2,
+    "HashParallelismDegree": 1
   },
   "RegistrationSession": {
     "LifetimeMinutes": 10,
