--- a/RealmeyeIdentity/RealmeyeIdentity.csproj
+++ b/RealmeyeIdentity/RealmeyeIdentity.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
