add auth code flow; fix restore registration

--- a/RealmeyeIdentity/appsettings.json
+++ b/RealmeyeIdentity/appsettings.json
@@ -10,16 +10,16 @@
     "HashIterations": 2,
     "HashParallelismDegree": 1
   },
-  "RegistrationSession": {
-    "LifetimeMinutes": 10,
-    "IdLengthBytes": 64
+  "Authentication": {
+    "RegistrationSessionIdLengthBytes": 64,
+    "RegistrationSessionLifetimeMinutes": 10,
+    "AuthCodeLengthBytes": 64,
+    "AuthCodeLifetimeMinutes": 10,
+    "IdTokenIssuer": "RealmeyeIdentity",
+    "IdTokenLifetimeMinutes": 10
   },
   "CodeGenerator": {
     "CodeLengthBytes": 8
-  },
-  "IdToken": {
-    "Issuer": "RealmeyeIdentity",
-    "LifetimeMinutes": 15
   },
   "Logging": {
     "LogLevel": {
